# unclogger

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: index.md  reference.md  requirements.txt  sensitive.md
release-notes/: 0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.2.1.md  0.2.2.md  1.fixed.md  README.md
scripts/: extract_changelog.py  suggest_version.py
tests/: conftest.py  test_defaults.py
tests/logger/: test_configure.py  test_context.py  test_logging.py  test_processors.py  test_set_level.py
tests/logger/clean_data/: conftest.py  test_clean_fields.py  test_hash_fields.py
tests/logger/processors/: test_clean_data.py  test_clean_fields.py  test_clean_values.py  test_hash_data.py  test_hash_fields.py
unclogger/: __init__.py  defaults.py  logger.py  processors.py
unclogger/processors/: __init__.py  clean_data.py
