[project]
name = "unclogger"
version = "0.1.2"
description = "Custom wrapper for enhanced structured logging."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Berislav Lopac", email = "berislav@lopac.net"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "structlog>=24.1",
]

[project.urls]
homepage = "https://unclogger.readthedocs.io"
documentation = "https://unclogger.readthedocs.io"
repository = "https://github.com/berislavlopac/unclogger"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["unclogger/"]

[tool.pdm.dev-dependencies]
tests = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-spec>=3.2.0",
    "mypy>=1.8.0",
]
checks = [
    "ruff>=0.1",
    "pydocstyle>=6.1.1",
    "isort>=5.10.1",
]
dev = [
    "toml>=0.10.2",
    "tox>=4.4.6",
    "tox-pdm>=0.6.1",
]
docs = [
    "mkdocs>=1.3.0",
    "mkapi>=1.0.14",
    "mkdocs-material>=8.5.6",
    "pymdown-extensions>=9.9",
    "jinja2<3.1.0",
]

[tool.pdm.scripts]
tests.cmd = "pytest --spec --cov"
check-lint.shell = """
    ruff check .
    ruff format --check .
    isort --check .
    isort --check .
"""
check-typing.cmd = "mypy --install-types --non-interactive unclogger/"
check-docs.cmd = "pydocstyle unclogger/"
checks.composite = ["check-lint", "check-typing", "check-docs"]
new-commits.shell = "git log $(git describe --tags --abbrev=0)..HEAD --oneline --no-decorate"
doc-reqs.cmd = "pdm export -dG docs --without-hashes --no-default"

[tool.pytest.ini_options]
minversion = "6.0"

[tool.coverage.run]
source = [ "unclogger/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract",]

[tool.ruff]
line-length = 96
target-version = "py311"
output-format = "grouped"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.isort]
profile = "black"
line_length = 96
filter_files = true
force_alphabetical_sort_within_sections = true

[tool.mypy]
mypy_path = "unclogger/"
ignore_missing_imports = true

[tool.pydocstyle]
add-ignore = "D105, D107, D212, D401"
convention = "google"
match-dir = "(?!tests).*"
